# cp3

./: .gitignore  10114.cpp  11559.cpp  README.md
epi/: 5.5.cpp
kattis/untitled1/: CMakeLists.txt  main.cpp  practice.cpp  practice.h
kattis/untitled10/: CMakeLists.txt  main.cpp
kattis/untitled11/: CMakeLists.txt  main.cpp
kattis/untitled12/: CMakeLists.txt  main.cpp
kattis/untitled13/: CMakeLists.txt  main.cpp
kattis/untitled14/: CMakeLists.txt  main.cpp
kattis/untitled15/: main.cpp
kattis/untitled16/: CMakeLists.txt  main.cpp
kattis/untitled17/: CMakeLists.txt  main.cpp
kattis/untitled18/: CMakeLists.txt  main.cpp
kattis/untitled19/: CMakeLists.txt  main.cpp
kattis/untitled2/: main.cpp
kattis/untitled20/: CMakeLists.txt  main.cpp
kattis/untitled21/: CMakeLists.txt  main.cpp
kattis/untitled22/: CMakeLists.txt  main.cpp
kattis/untitled23/: CMakeLists.txt  main.cpp
kattis/untitled24/: CMakeLists.txt  main.cpp
kattis/untitled25/: CMakeLists.txt  main.cpp
kattis/untitled26/: CMakeLists.txt
kattis/untitled27/: CMakeLists.txt  main.cpp
kattis/untitled28/: CMakeLists.txt  main.cpp
kattis/untitled29/: CMakeLists.txt  main.cpp
kattis/untitled3/: main.cpp
kattis/untitled30/: CMakeLists.txt  main.cpp
leetcode/QtcreatorProjects/untitled65/: CMakeLists.txt  main.cpp
play/: sam.py
play/boost/: example
uva/: 00541.cpp  100.cpp  10038.cpp  10055.cpp  10071.cpp  10114.cpp  10189.cpp  10226.cpp  10550.cpp  10783.cpp  11172.cpp  1124.cpp  11286.cpp  11340.cpp  11498.cpp  11727.cpp  11799.cpp  146.cpp  272.cpp  494.cpp  514.cpp  591.cpp
(+531 files in other folders)
